--- a/trabalho.html
+++ b/trabalho.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>trabalhoaraya.</title>
+    <title>Document</title>
 </head>
 <body>
-
-<h1>Perguntas</h1>
-
-<h2>Respostas</h2>
-    <p>Ir para <a href="trabalho.html"> trabalho</a></p>
+    <h1>Perguntas1</h1>
+    <h2>Respostas2</h2>
 </body>
 </html>
