incluir mais informações

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>Perguntas</h1>
 
 <h2>Respostas</h2>
+<h3>mais informações</h3>
     <p>Ir para <a href="trabalho.html"> trabalho</a></p>
 </body>
 </html>
